refactor(conf): remove pg and back mandatory config